Fixing email button spacing

--- a/subpages/remy-hr/repjegy/css/Travel.css
+++ b/subpages/remy-hr/repjegy/css/Travel.css
@@ -233,5 +233,5 @@ select.list-dt:focus {
 }
 
 .emailBtn{
-    padding-top: 10px;
+    margin-top: 2px !important;
 }
